--- a/Learn in todays class/today.html
+++ b/Learn in todays class/today.html
@@ -7,6 +7,32 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
+
+<style>
+    td{
+    color: red; 
+    font-size:32px; 
+}
+
+ #FirstID{
+     color:blue;
+}
+
+ .FirstClass{
+     color: yellow;
+}
+
+ body{
+     background-color: aqua;
+}
+
+.box{
+    border: 3px solid red;
+}
+</style>
+
+
+
 <body>
 
     <div class="bg-success">
